# zarrs

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  BUILD.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TODO.md  build.rs  coverage.sh  examples  makefile
zarrs/: CITATION.cff  Cargo.toml  build.rs
zarrs/benches/: array_blosc.rs  array_uncompressed.rs  fill_value.rs
zarrs/doc/: BUILD.md  TODO.md  ecosystem.md
zarrs/doc/status/: ZEPs.md  chunk_grids.md  chunk_key_encodings.md  codecs.md  codecs_experimental.md  data_types.md  storage_transformers.md  stores.md
zarrs/examples/: array_write_read.rs  array_write_read_ndarray.rs  array_write_read_string.rs  async_array_write_read.rs  async_http_array_read.rs  custom_data_type_fixed_size.rs  custom_data_type_float8_e3m4.rs  custom_data_type_uint12.rs  custom_data_type_uint4.rs  custom_data_type_variable_size.rs  rectangular_array_write_read.rs  sharded_array_write_read.rs  sync_http_array_read.rs  zarr_v2_to_v3.rs  zip_array_write_read.rs
zarrs/src/: array.rs  array_subset.rs  config.rs  group.rs  indexer.rs  lib.rs  node.rs  plugin.rs  version.rs
zarrs/src/array/: array_async_readable.rs  array_async_readable_writable.rs  array_async_sharded_readable_ext.rs  array_async_writable.rs  array_builder.rs  array_bytes.rs  array_bytes_fixed_disjoint_view.rs  array_bytes_fixed_non_overlapping_view.rs  array_dlpack_ext.rs  array_errors.rs  array_metadata_options.rs  array_representation.rs  array_sharded_ext.rs  array_sync_readable.rs  array_sync_readable_writable.rs  array_sync_sharded_readable_ext.rs  array_sync_writable.rs  bytes_representation.rs  chunk_cache.rs  chunk_grid.rs  chunk_key_encoding.rs  codec.rs  concurrency.rs  data_type.rs  element.rs  fill_value.rs  storage_transformer.rs
zarrs/src/array/array_bytes/: raw_bytes_offsets.rs
zarrs/src/array/array_dlpack_ext/: array_dlpack_ext_async.rs  array_dlpack_ext_sync.rs
zarrs/src/array/chunk_cache/: array_chunk_cache_ext_sync.rs  chunk_cache_lru.rs
zarrs/src/array/chunk_grid/: rectangular.rs  regular.rs
zarrs/src/array/chunk_key_encoding/: default.rs  v2.rs
zarrs/src/array/codec/: array_partial_decoder_cache.rs  array_partial_decoder_default_async.rs  array_partial_decoder_default_sync.rs  array_partial_encoder_default.rs  array_partial_encoder_default_async.rs  array_partial_encoder_default_sync.rs  array_to_array.rs  options.rs  (+21 more)
zarrs/src/array_subset/: iterators.rs
zarrs/src/config/: codec_map_default.rs  codec_maps_default.rs  data_type_maps_default.rs
zarrs/src/group/: group_builder.rs  group_metadata_options.rs
zarrs/src/node/: key.rs  node_async.rs  node_name.rs  node_path.rs  node_sync.rs
zarrs/tests/: array_async.rs  array_async_to_sync.rs  array_chunk_manifest.rs  array_future_stabilisation.rs  array_partial_encode.rs  array_sync.rs  cities.rs  hierarchy.rs  round_trips.rs  zarr_python_compat.rs  zarr_python_compat_numpy_time.rs  zarr_python_numpy_time.rs
zarrs/tests/data/: array_metadata.json  cities.csv  v2_cities.py  v2_fill_value.py  v2_generate.py  v2_str0.py  v2_str0_zarr_python_v2.py  v3_cities.py  v3_generate.py  zarr_python_fletcher32.py  zarr_python_numpy_time.py  zarr_python_zip.py
zarrs_data_type/: CHANGELOG.md  Cargo.toml  README.md
zarrs_data_type/src/: data_type.rs  data_type_extension.rs  data_type_extension_bytes_codec.rs  data_type_extension_packbits_codec.rs  data_type_plugin.rs  fill_value.rs  lib.rs
zarrs_filesystem/: CHANGELOG.md  Cargo.toml  README.md
zarrs_filesystem/src/: lib.rs
zarrs_filesystem/tests/: filesystem.rs
zarrs_http/: CHANGELOG.md  Cargo.toml  README.md
zarrs_http/src/: lib.rs
zarrs_metadata/: CHANGELOG.md  Cargo.toml  README.md
zarrs_metadata/src/: array.rs  codec_map.rs  extension.rs  extension_aliases.rs  extension_aliases_codec.rs  extension_aliases_data_type.rs  extension_map.rs  extension_type.rs  lib.rs  v2.rs  v2_to_v3.rs  v3.rs  version.rs  zarr_version.rs
zarrs_metadata/src/array/: chunk_key_separator.rs  chunk_shape.rs  codec.rs  dimension_name.rs  endianness.rs
zarrs_metadata/src/extension/: extension_aliases.rs  extension_aliases_codec.rs  extension_aliases_data_type.rs  extension_type.rs
zarrs_metadata/src/v2/: array.rs  group.rs  metadata.rs
zarrs_metadata/src/v3/: array.rs  group.rs  metadata.rs
zarrs_metadata/tests/: extensions_zep_9.rs
zarrs_metadata_ext/: CHANGELOG.md  Cargo.toml  README.md
zarrs_metadata_ext/src/: array.rs  array_storage_transformer.rs  chunk_grid.rs  chunk_key_encoding.rs  codec.rs  data_type.rs  group.rs  lib.rs  v2_to_v3.rs
zarrs_metadata_ext/src/chunk_grid/: rectangular.rs  regular.rs
zarrs_metadata_ext/src/chunk_key_encoding/: default.rs  v2.rs
zarrs_metadata_ext/src/group/: consolidated_metadata.rs
zarrs_object_store/: CHANGELOG.md  Cargo.toml  README.md
zarrs_object_store/doc/: version_compatibility_matrix.md
zarrs_object_store/src/: lib.rs
zarrs_object_store/tests/: async.rs
zarrs_opendal/: CHANGELOG.md  Cargo.toml  README.md
zarrs_opendal/doc/: version_compatibility_matrix.md
zarrs_opendal/src/: async.rs  lib.rs  sync.rs
zarrs_opendal/tests/: async.rs  sync.rs
zarrs_plugin/: CHANGELOG.md  Cargo.toml  README.md
zarrs_plugin/src/: lib.rs
zarrs_registry/: CHANGELOG.md  Cargo.toml  README.md
zarrs_registry/src/: chunk_grid.rs  chunk_key_encoding.rs  codec.rs  data_type.rs  extension_aliases.rs  extension_aliases_chunk_grid.rs  extension_aliases_chunk_key_encoding.rs  extension_aliases_codec.rs  extension_aliases_data_type.rs  extension_aliases_storage_transformer.rs  lib.rs
zarrs_storage/: CHANGELOG.md  Cargo.toml  README.md
zarrs_storage/src/: byte_range.rs  lib.rs  storage_adapter.rs  storage_async.rs  storage_handle.rs  storage_sync.rs  storage_value_io.rs  store.rs  store_key.rs  store_prefix.rs  store_test.rs
zarrs_storage/src/storage_adapter/: async_to_sync.rs  performance_metrics.rs  usage_log.rs  zip.rs
zarrs_storage/src/store/: memory_store.rs  store_async.rs
zarrs_zip/: CHANGELOG.md  Cargo.toml  README.md
zarrs_zip/src/: lib.rs
(+776 files in other folders)
