[workspace]

resolver = "2"

members = [
    "zarrs",
    "zarrs_data_type",
    "zarrs_metadata",
    "zarrs_metadata_ext",
    "zarrs_plugin",
    "zarrs_registry",
    "zarrs_storage",
    "zarrs_filesystem",
    "zarrs_http",
    "zarrs_object_store",
    "zarrs_opendal",
    "zarrs_zip",
]

[workspace.lints.rust]
unused_variables = "warn"
dead_code = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
# wildcard_enum_match_arm = "warn"

[workspace.dependencies.zarrs_data_type]
version = "0.3.1"
path = "zarrs_data_type"

[workspace.dependencies.zarrs_metadata]
version = "0.5.0"
path = "zarrs_metadata"

[workspace.dependencies.zarrs_metadata_ext]
version = "0.1.1"
path = "zarrs_metadata_ext"

[workspace.dependencies.zarrs_plugin]
version = "0.2.1"
path = "zarrs_plugin"

[workspace.dependencies.zarrs_registry]
version = "0.1.3"
path = "zarrs_registry"

[workspace.dependencies.zarrs_storage]
version = "0.3.4"
path = "zarrs_storage"

[workspace.dependencies.zarrs_filesystem]
version = "0.2.3"
path = "zarrs_filesystem"

[workspace.dependencies.zarrs_http]
version = "0.2.2"
path = "zarrs_http"

[workspace.dependencies.zarrs_object_store]
version = "0.4.2"
path = "zarrs_object_store"

[workspace.dependencies.zarrs_opendal]
version = "0.7.2"
path = "zarrs_opendal"

[workspace.dependencies.zarrs_zip]
version = "0.2.2"
path = "zarrs_zip"

[workspace.dependencies.object_store]
version = "0.12"

[workspace.dependencies.opendal]
version = "0.53.0"

[workspace.dependencies.zip]
version = "3.0.0"

[workspace.dependencies.half]
version = "2.3.1"
features = ["bytemuck"]

[workspace.dependencies.num]
version = "0.4.1"

[workspace.dependencies.inventory]
version = "0.3.0"

[workspace.dependencies.thiserror]
version = "2.0.12"
