[package]
name = "zarrs_filesystem"
version = "0.1.0"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.76"
description = "A filesystem store for the zarrs crate"
documentation = "https://docs.rs/zarrs_filesystem"
repository = "https://github.com/LDeakin/zarrs"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "storage", "store", "filesystem"]
categories = ["encoding"]

[dependencies]
bytes = "1.6.0"
derive_more = { version = "1.0.0", features = ["from"] }
itertools = "0.13.0"
libc = "0.2.158"
page_size = "0.6.0"
parking_lot = "0.12.0"
pathdiff = "0.2.0"
thiserror = "1.0.61"
walkdir = "2.3.2"
zarrs_storage = { workspace = true }

[dev-dependencies]
tempfile = "3"
