[package]
name = "zarrs_filesystem"
version = "0.2.1"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.77"
description = "A filesystem store for the zarrs crate"
homepage = "https://zarrs.dev"
documentation = "https://docs.rs/zarrs_filesystem"
repository = "https://github.com/LDeakin/zarrs/tree/main/zarrs_filesystem"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "storage", "store", "filesystem"]
categories = ["encoding"]

[lints]
workspace = true

[dependencies]
bytes = "1.6.0"
derive_more = { version = "2.0.0", features = ["from"] }
itertools = "0.14.0"
libc = "0.2.158"
page_size = "0.6.0"
parking_lot = "0.12.0" # TODO: Remove with Rust 1.78+
pathdiff = "0.2.0"
thiserror = { workspace = true }
walkdir = "2.3.2"
zarrs_storage = { workspace = true }

[dev-dependencies]
tempfile = "3"
