[package]
name = "zarrs_http"
version = "0.2.0"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.77"
description = "A synchronous http store for the zarrs crate"
homepage = "https://zarrs.dev"
documentation = "https://docs.rs/zarrs_storage"
repository = "https://github.com/LDeakin/zarrs"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "storage", "store"]
categories = ["encoding"]

[lints]
workspace = true

[dependencies]
itertools = "0.13.0"
thiserror = "2.0.0"
reqwest = { version = ">=0.11.8,<0.13", features = ["blocking"] }
url = { version = "2.2.0" }
zarrs_storage = { workspace = true }
