[package]
name = "zarrs_http"
version = "0.2.2"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.77"
description = "A synchronous http store for the zarrs crate"
homepage = "https://zarrs.dev"
documentation = "https://docs.rs/zarrs_http"
repository = "https://github.com/zarrs/zarrs/tree/main/zarrs_http"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "http"]
categories = ["encoding"]

[lints]
workspace = true

[dependencies]
itertools = "0.14.0"
thiserror.workspace = true
reqwest = { version = ">=0.11.8,<0.13", features = ["blocking"] }
url = { version = "2.2.0" }
zarrs_storage.workspace = true
