[package]
name = "zarrs_metadata"
version = "0.1.0"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.76"
description = "Zarr metadata support for the zarrs crate"
documentation = "https://docs.rs/zarrs_object_store"
repository = "https://github.com/LDeakin/zarrs"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "metadata"]
categories = ["encoding"]

[dependencies]
derive_more = { version = "1.0.0", features = ["display", "from"] }
half = { version = "2.0.0", features = ["bytemuck"] }
monostate = "0.1.0"
num = { version = "0.4.1" }
serde = { version = "1.0.184", features = ["derive"] }
serde_json = { version = "1.0.71", features = ["float_roundtrip", "preserve_order"] }
serde_repr = "0.1.19"
thiserror = "1.0.61"
