[package]
name = "zarrs_metadata"
version = "0.3.1"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.77"
description = "Zarr metadata support for the zarrs crate"
homepage = "https://zarrs.dev"
documentation = "https://docs.rs/zarrs_object_store"
repository = "https://github.com/LDeakin/zarrs"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "metadata"]
categories = ["encoding"]

[lints]
workspace = true

[dependencies]
derive_more = { version = "1.0.0", features = ["display", "from"] }
half = { workspace = true }
monostate = "0.1.0"
num = { workspace = true }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = { version = "1.0.71", features = ["float_roundtrip", "preserve_order"] }
serde_repr = "0.1.19"
thiserror = "2.0.0"
