[package]
name = "zarrs_metadata"
version = "0.5.0"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.77"
description = "Zarr metadata support for the zarrs crate"
homepage = "https://zarrs.dev"
documentation = "https://docs.rs/zarrs_metadata"
repository = "https://github.com/zarrs/zarrs/tree/main/zarrs_metadata"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "metadata"]
categories = ["encoding"]

[lints]
workspace = true

[dependencies]
derive_more = { version = "2.0.0", features = ["deref", "display", "from", "into"] }
half.workspace = true
monostate = "0.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.71", features = ["float_roundtrip", "preserve_order"] }
thiserror.workspace = true
