[package]
name = "zarrs_opendal"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
futures = "0.3.29"
opendal = { version = ">=0.46,<0.50", default-features = false }
zarrs_storage = { workspace = true, features = ["async"] }

[dev-dependencies]
opendal = { version = "0.49", features = ["services-fs", "services-http"] }
tempfile = "3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
zarrs_storage = { workspace = true, features = ["async", "test"] }
