[package]
name = "zarrs_plugin"
version = "0.2.0"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.77"
description = "The plugin API for the zarrs crate"
homepage = "https://zarrs.dev"
documentation = "https://docs.rs/zarrs_plugin"
repository = "https://github.com/zarrs/zarrs/tree/main/zarrs_plugin"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "plugin"]
categories = ["encoding"]

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
