[package]
name = "zarrs_registry"
version = "0.1.3"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.77"
description = "The Zarr extension point registry for the zarrs crate"
homepage = "https://zarrs.dev"
documentation = "https://docs.rs/zarrs_registry"
repository = "https://github.com/zarrs/zarrs/tree/main/zarrs_registry"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "extension", "registry"]
categories = ["encoding"]

[lints]
workspace = true

[dependencies]
regex = "1.11.1"
