[package]
name = "zarrs_zip"
version = "0.2.1"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.77"
description = "A storage adapter for zip files for the zarrs crate"
homepage = "https://zarrs.dev"
documentation = "https://docs.rs/zarrs_zip"
repository = "https://github.com/LDeakin/zarrs/tree/main/zarrs_zip"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "storage", "store", "zip"]
categories = ["encoding"]

[lints]
workspace = true

[dependencies]
derive_more = { version = "2.0.0", features = ["from"] }
itertools = "0.14.0"
thiserror = { workspace = true }
zarrs_storage = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = "3"
walkdir = "2.3.2"
zarrs_filesystem = { workspace = true }
